alignemnt fixes - archives

--- a/wp-content/themes/ar-freight/scss/_archives.scss
+++ b/wp-content/themes/ar-freight/scss/_archives.scss
@@ -3,7 +3,7 @@
         min-height: 570px;
         @media all and (max-width: 991px) {
             padding-top: 50px;
-            min-height: 660px;
+            min-height: 0;
         }
         .tab {
             float: left;
@@ -97,17 +97,17 @@
         }
         .tabcontent {
             float: left;
-            padding: 20px 0 0 100px;
+            padding: 20px 0 70px 100px;
             width: 70%;
             border-left: none;
             color: #747474;
             @media all and (max-width: 1040px) {
-                padding: 20px 0 0 50px;
+                padding: 20px 0 50px 50px;
                 width: 68%;
             }
             @media all and (max-width: 990px) {
                 float: none;
-                padding: 20px 0 0 0;
+                padding: 20px 0 30px 0;
                 width: 70%;
             }
             @media all and (max-width: 768px) {
@@ -149,7 +149,7 @@
             }
             
             .forms-wrapper {
-                margin-bottom: 70px;
+          
                 .form-block {
                     margin-bottom: 20px;
                     .form-title {
@@ -172,9 +172,7 @@
             .downloads-wrapper {
                 display: flex;
                 flex-wrap: wrap;
-                @media all and (max-width: 991px) {
-                   padding-bottom: 40px;
-                }
+                
                 .download-block {
                     flex-grow: 0;
                     position: relative;
@@ -220,6 +218,7 @@
                 }
             }
             .link-wrapper {
+                margin-bottom: 20px;
                 .link-block {
                     a {
                         font-size: 26px;
