--- a/wp-content/themes/ar-freight/scss/_faq.scss
+++ b/wp-content/themes/ar-freight/scss/_faq.scss
@@ -114,7 +114,7 @@ $freight-blue: #1674ab;
         line-height: 26px;
       }
     }
-    .download-section { border: solid;
+    .download-section {
       flex-wrap: wrap;
       margin: 50px 0;
       @media all and (min-width: 850px) {
